Fix alignment

--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,11 @@
 /* Code to make input and output line up side by side */
 
 #menu {
-    height: 4em;
+    width: 100%;
+    height: 5em;
+    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+    -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+    box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 #wrapper {
